; ModuleID = '/home/carl/AnghaBench/linux/drivers/mtd/nand/raw/gpmi-nand/extr_gpmi-nand.c_nand_boot_set_geometry.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mtd/nand/raw/gpmi-nand/extr_gpmi-nand.c_nand_boot_set_geometry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpmi_nand_data = type { %struct.boot_rom_geometry }
%struct.boot_rom_geometry = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gpmi_nand_data*)* @nand_boot_set_geometry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nand_boot_set_geometry(%struct.gpmi_nand_data* %0) #0 {
  %2 = alloca %struct.gpmi_nand_data*, align 8
  %3 = alloca %struct.boot_rom_geometry*, align 8
  store %struct.gpmi_nand_data* %0, %struct.gpmi_nand_data** %2, align 8
  %4 = load %struct.gpmi_nand_data*, %struct.gpmi_nand_data** %2, align 8
  %5 = getelementptr inbounds %struct.gpmi_nand_data, %struct.gpmi_nand_data* %4, i32 0, i32 0
  store %struct.boot_rom_geometry* %5, %struct.boot_rom_geometry** %3, align 8
  %6 = load %struct.boot_rom_geometry*, %struct.boot_rom_geometry** %3, align 8
  %7 = getelementptr inbounds %struct.boot_rom_geometry, %struct.boot_rom_geometry* %6, i32 0, i32 0
  store i32 64, i32* %7, align 4
  %8 = load %struct.boot_rom_geometry*, %struct.boot_rom_geometry** %3, align 8
  %9 = getelementptr inbounds %struct.boot_rom_geometry, %struct.boot_rom_geometry* %8, i32 0, i32 1
  store i32 2, i32* %9, align 4
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
